tests/NormalTests/paczka1/fuzzy1/14349146.err
Error in line 1: 6qIwQ7sfn A966 9f,3
Error in line 3: 6qIwQ7sfn A966 195,7
Error in line 4: 6qIwQ7sfn S698 15,1
Error in line 8: MJbpj A966 1,8
Error in line 12: g6H S167 9,5
Error in line 14: g6H A966 68,2
Error in line 17: MJbpj S513 66,4
Error in line 20: S 67 S 67 88,3
Error in line 16: g6H S167 2,1
Error in line 25: g6H S698 87,7
Error in line 28: g6H S167 69,6
Error in line 31: MJbpj S167 68,8
Error in line 11: 6qIwQ7sfn S513 210,4
